# fantasy-tarot

./: README.md  pyproject.toml
data/: compiled_data.json  training_data.json
modules/: index.py
scripts/: compile.py
signatures/: index.py
